src/plugins/data/public/antlr/promql/.generated/PromQLParser.ts
// Generated from ./src/plugins/data/public/antlr/promql/grammar/PromQLParser.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { PromQLParserVisitor } from "./PromQLParserVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class PromQLParser extends antlr.Parser {
    public static readonly NUMBER = 1;
    public static readonly STRING = 2;
    public static readonly ADD = 3;
    public static readonly SUB = 4;
    public static readonly MULT = 5;
    public static readonly DIV = 6;
    public static readonly MOD = 7;
    public static readonly POW = 8;
    public static readonly AND = 9;
    public static readonly OR = 10;
    public static readonly UNLESS = 11;
    public static readonly EQ = 12;
    public static readonly DEQ = 13;
    public static readonly NE = 14;
    public static readonly GT = 15;
    public static readonly LT = 16;
    public static readonly GE = 17;
    public static readonly LE = 18;
    public static readonly RE = 19;
    public static readonly NRE = 20;
    public static readonly BY = 21;
    public static readonly WITHOUT = 22;
    public static readonly ON = 23;
    public static readonly IGNORING = 24;
    public static readonly GROUP_LEFT = 25;
    public static readonly GROUP_RIGHT = 26;
    public static readonly OFFSET = 27;
    public static readonly BOOL = 28;
    public static readonly SUM = 29;
    public static readonly MIN = 30;
    public static readonly MAX = 31;
    public static readonly AVG = 32;
    public static readonly GROUP = 33;
    public static readonly STDDEV = 34;
    public static readonly STDVAR = 35;
    public static readonly COUNT = 36;
    public static readonly COUNT_VALUES = 37;
    public static readonly BOTTOMK = 38;
    public static readonly TOPK = 39;
    public static readonly QUANTILE = 40;
    public static readonly LIMITK = 41;
    public static readonly LIMIT_RATIO = 42;
    public static readonly ABS = 43;
    public static readonly ABSENT = 44;
    public static readonly ABSENT_OVER_TIME = 45;
    public static readonly CEIL = 46;
    public static readonly CHANGES = 47;
    public static readonly CLAMP = 48;
    public static readonly CLAMP_MAX = 49;
    public static readonly CLAMP_MIN = 50;
    public static readonly DAY_OF_MONTH = 51;
    public static readonly DAY_OF_WEEK = 52;
    public static readonly DAY_OF_YEAR = 53;
    public static readonly DAYS_IN_MONTH = 54;
    public static readonly DELTA = 55;
    public static readonly DERIV = 56;
    public static readonly EXP = 57;
    public static readonly FLOOR = 58;
    public static readonly HISTOGRAM_COUNT = 59;
    public static readonly HISTOGRAM_SUM = 60;
    public static readonly HISTOGRAM_FRACTION = 61;
    public static readonly HISTOGRAM_QUANTILE = 62;
    public static readonly HOLT_WINTERS = 63;
    public static readonly HOUR = 64;
    public static readonly IDELTA = 65;
    public static readonly INCREASE = 66;
    public static readonly IRATE = 67;
    public static readonly LABEL_JOIN = 68;
    public static readonly LABEL_REPLACE = 69;
    public static readonly LN = 70;
    public static readonly LOG2 = 71;
    public static readonly LOG10 = 72;
    public static readonly MINUTE = 73;
    public static readonly MONTH = 74;
    public static readonly PREDICT_LINEAR = 75;
    public static readonly RATE = 76;
    public static readonly RESETS = 77;
    public static readonly ROUND = 78;
    public static readonly SCALAR = 79;
    public static readonly SGN = 80;
    public static readonly SORT = 81;
    public static readonly SORT_DESC = 82;
    public static readonly SQRT = 83;
    public static readonly TIME = 84;
    public static readonly TIMESTAMP = 85;
    public static readonly VECTOR = 86;
    public static readonly YEAR = 87;
    public static readonly AVG_OVER_TIME = 88;
    public static readonly MIN_OVER_TIME = 89;
    public static readonly MAX_OVER_TIME = 90;
    public static readonly SUM_OVER_TIME = 91;
    public static readonly COUNT_OVER_TIME = 92;
    public static readonly QUANTILE_OVER_TIME = 93;
    public static readonly STDDEV_OVER_TIME = 94;
    public static readonly STDVAR_OVER_TIME = 95;
    public static readonly LAST_OVER_TIME = 96;
    public static readonly PRESENT_OVER_TIME = 97;
    public static readonly ACOS = 98;
    public static readonly ACOSH = 99;
    public static readonly ASIN = 100;
    public static readonly ASINH = 101;
    public static readonly ATAN = 102;
    public static readonly ATANH = 103;
    public static readonly COS = 104;
    public static readonly COSH = 105;
    public static readonly SIN = 106;
    public static readonly SINH = 107;
    public static readonly TAN = 108;
    public static readonly TANH = 109;
    public static readonly DEG = 110;
    public static readonly PI = 111;
    public static readonly RAD = 112;
    public static readonly LEFT_BRACE = 113;
    public static readonly RIGHT_BRACE = 114;
    public static readonly LEFT_PAREN = 115;
    public static readonly RIGHT_PAREN = 116;
    public static readonly LEFT_BRACKET = 117;
    public static readonly RIGHT_BRACKET = 118;
    public static readonly COMMA = 119;
    public static readonly COLON = 120;
    public static readonly AT = 121;
    public static readonly DURATION = 122;
    public static readonly IDENTIFIER = 123;
    public static readonly WS = 124;
    public static readonly SL_COMMENT = 125;
    public static readonly RULE_expression = 0;
    public static readonly RULE_vectorOperation = 1;
    public static readonly RULE_unaryOp = 2;
    public static readonly RULE_powOp = 3;
    public static readonly RULE_multOp = 4;
    public static readonly RULE_addOp = 5;
    public static readonly RULE_compareOp = 6;
    public static readonly RULE_andUnlessOp = 7;
    public static readonly RULE_orOp = 8;
    public static readonly RULE_vectorMatchOp = 9;
    public static readonly RULE_subqueryOp = 10;
    public static readonly RULE_offsetOp = 11;
    public static readonly RULE_vector = 12;
    public static readonly RULE_parens = 13;
    public static readonly RULE_metricName = 14;
    public static readonly RULE_instantSelector = 15;
    public static readonly RULE_labelMatcher = 16;
    public static readonly RULE_labelValue = 17;
    public static readonly RULE_labelMatcherOperator = 18;
    public static readonly RULE_labelMatcherList = 19;
    public static readonly RULE_matrixSelector = 20;
    public static readonly RULE_timeRange = 21;
    public static readonly RULE_subqueryRange = 22;
    public static readonly RULE_duration = 23;
    public static readonly RULE_offset = 24;
    public static readonly RULE_function = 25;
    public static readonly RULE_parameter = 26;
    public static readonly RULE_parameterList = 27;
    public static readonly RULE_functionNames = 28;
    public static readonly RULE_aggregation = 29;
    public static readonly RULE_by = 30;
    public static readonly RULE_without = 31;
    public static readonly RULE_aggregationOperators = 32;
    public static readonly RULE_grouping = 33;
    public static readonly RULE_on_ = 34;
    public static readonly RULE_ignoring = 35;
    public static readonly RULE_groupLeft = 36;
    public static readonly RULE_groupRight = 37;
    public static readonly RULE_labelName = 38;
    public static readonly RULE_labelNameList = 39;
    public static readonly RULE_keyword = 40;
    public static readonly RULE_literal = 41;

    public static readonly literalNames = [
        null, null, null, "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'and'", 
        "'or'", "'unless'", "'='", "'=='", "'!='", "'>'", "'<'", "'>='", 
        "'<='", "'=~'", "'!~'", "'by'", "'without'", "'on'", "'ignoring'", 
        "'group_left'", "'group_right'", "'offset'", "'bool'", "'sum'", 
        "'min'", "'max'", "'avg'", "'group'", "'stddev'", "'stdvar'", "'count'", 
        "'count_values'", "'bottomk'", "'topk'", "'quantile'", "'limitk'", 
        "'limit_ratio'", "'abs'", "'absent'", "'absent_over_time'", "'ceil'", 
        "'changes'", "'clamp'", "'clamp_max'", "'clamp_min'", "'day_of_month'", 
        "'day_of_week'", "'day_of_year'", "'days_in_month'", "'delta'", 
        "'deriv'", "'exp'", "'floor'", "'histogram_count'", "'histogram_sum'", 
        "'histogram_fraction'", "'histogram_quantile'", "'holt_winters'", 
        "'hour'", "'idelta'", "'increase'", "'irate'", "'label_join'", "'label_replace'", 
        "'ln'", "'log2'", "'log10'", "'minute'", "'month'", "'predict_linear'", 
        "'rate'", "'resets'", "'round'", "'scalar'", "'sgn'", "'sort'", 
        "'sort_desc'", "'sqrt'", "'time'", "'timestamp'", "'vector'", "'year'", 
        "'avg_over_time'", "'min_over_time'", "'max_over_time'", "'sum_over_time'", 
        "'count_over_time'", "'quantile_over_time'", "'stddev_over_time'", 
        "'stdvar_over_time'", "'last_over_time'", "'present_over_time'", 
        "'acos'", "'acosh'", "'asin'", "'asinh'", "'atan'", "'atanh'", "'cos'", 
        "'cosh'", "'sin'", "'sinh'", "'tan'", "'tanh'", "'deg'", "'pi'", 
        "'rad'", "'{'", "'}'", "'('", "')'", "'['", "']'", "','", "':'", 
        "'@'"
    ];

    public static readonly symbolicNames = [
        null, "NUMBER", "STRING", "ADD", "SUB", "MULT", "DIV", "MOD", "POW", 
        "AND", "OR", "UNLESS", "EQ", "DEQ", "NE", "GT", "LT", "GE", "LE", 
        "RE", "NRE", "BY", "WITHOUT", "ON", "IGNORING", "GROUP_LEFT", "GROUP_RIGHT", 
        "OFFSET", "BOOL", "SUM", "MIN", "MAX", "AVG", "GROUP", "STDDEV", 
        "STDVAR", "COUNT", "COUNT_VALUES", "BOTTOMK", "TOPK", "QUANTILE", 
        "LIMITK", "LIMIT_RATIO", "ABS", "ABSENT", "ABSENT_OVER_TIME", "CEIL", 
        "CHANGES", "CLAMP", "CLAMP_MAX", "CLAMP_MIN", "DAY_OF_MONTH", "DAY_OF_WEEK", 
        "DAY_OF_YEAR", "DAYS_IN_MONTH", "DELTA", "DERIV", "EXP", "FLOOR", 
        "HISTOGRAM_COUNT", "HISTOGRAM_SUM", "HISTOGRAM_FRACTION", "HISTOGRAM_QUANTILE", 
        "HOLT_WINTERS", "HOUR", "IDELTA", "INCREASE", "IRATE", "LABEL_JOIN", 
        "LABEL_REPLACE", "LN", "LOG2", "LOG10", "MINUTE", "MONTH", "PREDICT_LINEAR", 
        "RATE", "RESETS", "ROUND", "SCALAR", "SGN", "SORT", "SORT_DESC", 
        "SQRT", "TIME", "TIMESTAMP", "VECTOR", "YEAR", "AVG_OVER_TIME", 
        "MIN_OVER_TIME", "MAX_OVER_TIME", "SUM_OVER_TIME", "COUNT_OVER_TIME", 
        "QUANTILE_OVER_TIME", "STDDEV_OVER_TIME", "STDVAR_OVER_TIME", "LAST_OVER_TIME", 
        "PRESENT_OVER_TIME", "ACOS", "ACOSH", "ASIN", "ASINH", "ATAN", "ATANH", 
        "COS", "COSH", "SIN", "SINH", "TAN", "TANH", "DEG", "PI", "RAD", 
        "LEFT_BRACE", "RIGHT_BRACE", "LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACKET", 
        "RIGHT_BRACKET", "COMMA", "COLON", "AT", "DURATION", "IDENTIFIER", 
        "WS", "SL_COMMENT"
    ];
    public static readonly ruleNames = [
        "expression", "vectorOperation", "unaryOp", "powOp", "multOp", "addOp", 
        "compareOp", "andUnlessOp", "orOp", "vectorMatchOp", "subqueryOp", 
        "offsetOp", "vector", "parens", "metricName", "instantSelector", 
        "labelMatcher", "labelValue", "labelMatcherOperator", "labelMatcherList", 
        "matrixSelector", "timeRange", "subqueryRange", "duration", "offset", 
        "function", "parameter", "parameterList", "functionNames", "aggregation", 
        "by", "without", "aggregationOperators", "grouping", "on_", "ignoring", 
        "groupLeft", "groupRight", "labelName", "labelNameList", "keyword", 
        "literal",
    ];

    public get grammarFileName(): string { return "PromQLParser.g4"; }
    public get literalNames(): (string | null)[] { return PromQLParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return PromQLParser.symbolicNames; }
    public get ruleNames(): string[] { return PromQLParser.ruleNames; }
    public get serializedATN(): number[] { return PromQLParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, PromQLParser._ATN, PromQLParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public expression(): ExpressionContext {
        let localContext = new ExpressionContext(this.context, this.state);
        this.enterRule(localContext, 0, PromQLParser.RULE_expression);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 84;
            this.vectorOperation(0);
            this.state = 85;
            this.match(PromQLParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public vectorOperation(): VectorOperationContext;
    public vectorOperation(_p: number): VectorOperationContext;
    public vectorOperation(_p?: number): VectorOperationContext {
        if (_p === undefined) {
            _p = 0;
        }

        let parentContext = this.context;
        let parentState = this.state;
        let localContext = new VectorOperationContext(this.context, parentState);
        let previousContext = localContext;
        let _startState = 2;
        this.enterRecursionRule(localContext, 2, PromQLParser.RULE_vectorOperation, _p);
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 92;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 0, this.context) ) {
            case 1:
                {
                this.state = 88;
                this.unaryOp();
                this.state = 89;
                this.vectorOperation(9);
                }
                break;
            case 2:
                {
                this.state = 91;
                this.vector();
                }
                break;
            }
            this.context!.stop = this.tokenStream.LT(-1);
            this.state = 129;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 2, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    if (this.parseListeners != null) {
                        this.triggerExitRuleEvent();
                    }
                    previousContext = localContext;
                    {
                    this.state = 127;
                    this.errorHandler.sync(this);
                    switch (this.interpreter.adaptivePredict(this.tokenStream, 1, this.context) ) {
                    case 1:
                        {
                        localContext = new VectorOperationContext(parentContext, parentState);
                        this.pushNewRecursionContext(localContext, _startState, PromQLParser.RULE_vectorOperation);
                        this.state = 94;
                        if (!(this.precpred(this.context, 11))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 11)");
                        }
                        this.state = 95;
                        this.powOp();
                        this.state = 96;
                        this.vectorOperation(11);
                        }
                        break;
                    case 2:
                        {
                        localContext = new VectorOperationContext(parentContext, parentState);
                        this.pushNewRecursionContext(localContext, _startState, PromQLParser.RULE_vectorOperation);
                        this.state = 98;
                        if (!(this.precpred(this.context, 8))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 8)");
                        }
                        this.state = 99;
                        this.multOp();
                        this.state = 100;
                        this.vectorOperation(9);
                        }
                        break;
                    case 3:
                        {
                        localContext = new VectorOperationContext(parentContext, parentState);
                        this.pushNewRecursionContext(localContext, _startState, PromQLParser.RULE_vectorOperation);
                        this.state = 102;
                        if (!(this.precpred(this.context, 7))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 7)");
                        }
                        this.state = 103;
                        this.addOp();
                        this.state = 104;
                        this.vectorOperation(8);
                        }
                        break;
                    case 4:
                        {
                        localContext = new VectorOperationContext(parentContext, parentState);
                        this.pushNewRecursionContext(localContext, _startState, PromQLParser.RULE_vectorOperation);
                        this.state = 106;
                        if (!(this.precpred(this.context, 6))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 6)");
                        }
                        this.state = 107;
                        this.compareOp();
                        this.state = 108;
                        this.vectorOperation(7);
                        }
                        break;
                    case 5:
                        {
                        localContext = new VectorOperationContext(parentContext, parentState);
                        this.pushNewRecursionContext(localContext, _startState, PromQLParser.RULE_vectorOperation);
                        this.state = 110;
                        if (!(this.precpred(this.context, 5))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 5)");
                        }
                        this.state = 111;
                        this.andUnlessOp();
                        this.state = 112;
                        this.vectorOperation(6);
                        }
                        break;
                    case 6:
                        {
                        localContext = new VectorOperationContext(parentContext, parentState);
                        this.pushNewRecursionContext(localContext, _startState, PromQLParser.RULE_vectorOperation);
                        this.state = 114;
                        if (!(this.precpred(this.context, 4))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 4)");
                        }
                        this.state = 115;
                        this.orOp();
                        this.state = 116;
                        this.vectorOperation(5);
                        }
                        break;
                    case 7:
                        {
                        localContext = new VectorOperationContext(parentContext, parentState);
                        this.pushNewRecursionContext(localContext, _startState, PromQLParser.RULE_vectorOperation);
                        this.state = 118;
                        if (!(this.precpred(this.context, 3))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 3)");
                        }
                        this.state = 119;
                        this.vectorMatchOp();
                        this.state = 120;
                        this.vectorOperation(4);
                        }
                        break;
                    case 8:
                        {
                        localContext = new VectorOperationContext(parentContext, parentState);
                        this.pushNewRecursionContext(localContext, _startState, PromQLParser.RULE_vectorOperation);
                        this.state = 122;
                        if (!(this.precpred(this.context, 2))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 2)");
                        }
                        this.state = 123;
                        this.match(PromQLParser.AT);
                        this.state = 124;
                        this.vectorOperation(3);
                        }
                        break;
                    case 9:
                        {
                        localContext = new VectorOperationContext(parentContext, parentState);
                        this.pushNewRecursionContext(localContext, _startState, PromQLParser.RULE_vectorOperation);
                        this.state = 125;
                        if (!(this.precpred(this.context, 10))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 10)");
                        }
                        this.state = 126;
                        this.subqueryOp();
                        }
                        break;
                    }
                    }
                }
                this.state = 131;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 2, this.context);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.unrollRecursionContexts(parentContext);
        }
        return localContext;
    }
    public unaryOp(): UnaryOpContext {
        let localContext = new UnaryOpContext(this.context, this.state);
        this.enterRule(localContext, 4, PromQLParser.RULE_unaryOp);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 132;
            _la = this.tokenStream.LA(1);
            if(!(_la === 3 || _la === 4)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public powOp(): PowOpContext {
        let localContext = new PowOpContext(this.context, this.state);
        this.enterRule(localContext, 6, PromQLParser.RULE_powOp);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 134;
            this.match(PromQLParser.POW);
            this.state = 136;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 3, this.context) ) {
            case 1:
                {
                this.state = 135;
                this.grouping();
                }
                break;
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public multOp(): MultOpContext {
        let localContext = new MultOpContext(this.context, this.state);
        this.enterRule(localContext, 8, PromQLParser.RULE_multOp);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 138;
            _la = this.tokenStream.LA(1);
            if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 224) !== 0))) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            this.state = 140;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 4, this.context) ) {
            case 1:
                {
                this.state = 139;
                this.grouping();
                }
                break;
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public addOp(): AddOpContext {
        let localContext = new AddOpContext(this.context, this.state);
        this.enterRule(localContext, 10, PromQLParser.RULE_addOp);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 142;
            _la = this.tokenStream.LA(1);
            if(!(_la === 3 || _la === 4)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            this.state = 144;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 5, this.context) ) {
            case 1:
                {
                this.state = 143;
                this.grouping();
                }
                break;
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public compareOp(): CompareOpContext {
        let localContext = new CompareOpContext(this.context, this.state);
        this.enterRule(localContext, 12, PromQLParser.RULE_compareOp);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 146;
            _la = this.tokenStream.LA(1);
            if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 516096) !== 0))) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            this.state = 148;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 6, this.context) ) {
            case 1:
                {
                this.state = 147;
                this.match(PromQLParser.BOOL);
                }
                break;
            }
            this.state = 151;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 7, this.context) ) {
            case 1:
                {
                this.state = 150;
                this.grouping();
                }
                break;
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public andUnlessOp(): AndUnlessOpContext {
        let localContext = new AndUnlessOpContext(this.context, this.state);
        this.enterRule(localContext, 14, PromQLParser.RULE_andUnlessOp);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 153;
            _la = this.tokenStream.LA(1);
            if(!(_la === 9 || _la === 11)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            this.state = 155;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 8, this.context) ) {
            case 1:
                {
                this.state = 154;
                this.grouping();
                }
                break;
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public orOp(): OrOpContext {
        let localContext = new OrOpContext(this.context, this.state);
        this.enterRule(localContext, 16, PromQLParser.RULE_orOp);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 157;
            this.match(PromQLParser.OR);
            this.state = 159;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 9, this.context) ) {
            case 1:
                {
                this.state = 158;
                this.grouping();
                }
                break;
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public vectorMatchOp(): VectorMatchOpContext {
        let localContext = new VectorMatchOpContext(this.context, this.state);
        this.enterRule(localContext, 18, PromQLParser.RULE_vectorMatchOp);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 161;
            _la = this.tokenStream.LA(1);
            if(!(_la === 11 || _la === 23)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            this.state = 163;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 10, this.context) ) {
            case 1:
                {
                this.state = 162;
                this.grouping();
                }
                break;
            }
            }
